--- a/plugins/webgui/public/views/admin/accountSortAndFilterDialog.html
+++ b/plugins/webgui/public/views/admin/accountSortAndFilterDialog.html
@@ -28,7 +28,7 @@
                 </div>
                 <div flex>
                     <md-checkbox ng-model="publicInfo.accountFilter.filter.unlimit" ng-change="sortAndFilter()">无期限</md-checkbox>
-                    <md-checkbox ng-model="publicInfo.accountFilter.filter.mac" ng-change="sortAndFilter()">MAC地址</md-checkbox>
+                    <md-checkbox ng-model="publicInfo.accountFilter.filter.mac" ng-change="sortAndFilter()">MACaddress</md-checkbox>
                 </div>
             </div>
             <div style="margin-bottom: 0px;">订单类型：</div>
