--- a/plugins/webgui/public/views/admin/refSetting.html
+++ b/plugins/webgui/public/views/admin/refSetting.html
@@ -13,7 +13,7 @@
                             <md-divider></md-divider>
                             <md-list-item>
                                 <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                                    <div flex="75" translate>启用邀请码功能</div>
+                                    <div flex="75" translate>Enable invitation code feature</div>
                                     <div flex layout="row" layout-align="end center">
                                         <md-switch ng-model="refSetting.useRef" aria-label="useRef" ng-disabled="id !== 1"></md-switch>
                                     </div>
