--- a/plugins/webgui/public/views/dialog/addGiftCardBatch.html
+++ b/plugins/webgui/public/views/dialog/addGiftCardBatch.html
@@ -25,7 +25,7 @@
                         </md-select>
                     </md-input-container>
                     <md-input-container class="md-block">
-                        <label>备注</label>
+                        <label>Remarks</label>
                         <input type="text" required name="comment" ng-model="publicInfo.comment">
                     </md-input-container>
                 </form>
