--- a/plugins/webgui/public/views/dialog/addMacAccount.html
+++ b/plugins/webgui/public/views/dialog/addMacAccount.html
@@ -7,7 +7,7 @@
       <div layout="row" layout-align="center center">
         <form name="macForm">
           <md-input-container class="md-block">
-            <label translate>MAC地址</label>
+            <label translate>MACaddress</label>
             <input type="text" required name="mac" ng-model="publicInfo.mac">
           </md-input-container>
         </form>
