--- a/plugins/webgui/public/views/dialog/editUserComment.html
+++ b/plugins/webgui/public/views/dialog/editUserComment.html
@@ -7,7 +7,7 @@
           <div layout="row" layout-align="center center" ng-if="publicInfo.status === 'show'">
               <form name="commentForm">
                   <md-input-container class="md-block">
-                      <label translate>备注</label>
+                      <label translate>Remarks</label>
                       <input type="text" name="comment" ng-model="publicInfo.comment">
                   </md-input-container>
               </form>
