--- a/plugins/webgui/public/views/user/settings.html
+++ b/plugins/webgui/public/views/user/settings.html
@@ -45,7 +45,7 @@
             <md-list ng-if="config.macAccount">
                 <md-list-item ng-click="toMac()">
                     <div class="md-list-item-text" style="width: 100%;" layout="row" layout-align="space-between center">
-                        <div flex="75" translate>mac地址</div>
+                        <div flex="75" translate>macaddress</div>
                         <div flex layout="row" layout-align="end center">
                             <md-button class="md-primary" ng-click="toMac()"><span translate>点击进入</span>&gt;&gt;</md-button>
                         </div>
