--- a/plugins/webgui/public/views/admin/accountPage.html
+++ b/plugins/webgui/public/views/admin/accountPage.html
@@ -27,7 +27,7 @@
                         <md-list>
                             <md-list-item>
                                 <div flex layout="row" layout-align="space-between center">
-                                    <div flex="40" translate>地址：</div><div flex="60" style="text-align:right">{{ server.host }}</div>
+                                    <div flex="40" translate>address：</div><div flex="60" style="text-align:right">{{ server.host }}</div>
                                 </div>
                             </md-list-item>
                             <md-divider></md-divider>
@@ -103,7 +103,7 @@
                                 <div flex layout="row" layout-align="space-between center">
                                     <div flex="40" translate>周期：</div>
                                     <div flex="60" style="text-align:right">
-                                        <span ng-if="account.type === 1" translate>无</span>
+                                        <span ng-if="account.type === 1" translate>none</span>
                                         <span ng-if="account.type >=2 && account.type <= 5">
                                             <span style="font-size: 0.9em;">{{account.data.from | date : 'yyyy-MM-dd HH:mm'}}</span><br><span style="font-size: 0.9em;">{{account.data.to | date : 'yyyy-MM-dd HH:mm'}}</span>
                                         </span>
@@ -145,7 +145,7 @@
                 <div layout="row" layout-align="center center" layout-wrap ng-if="servers.length">
                     <div flex-lg="10"></div>
                     <div flex="70" flex-md="80" flex-sm="100" flex-xs="100">
-                        <md-button class="md-primary" ng-click="subscribe(account.id)" ng-if="config.subscribe">{{ '订阅链接' | translate }}</md-button>
+                        <md-button class="md-primary" ng-click="subscribe(account.id)" ng-if="config.subscribe">{{ 'subscribe link' | translate }}</md-button>
                         <md-button ng-show="isSS(server)" class="md-primary" ng-click="showQrcodeDialog(server, account)">{{ 'account QR code' | translate }}</md-button>
                         <md-button ng-show="isWG(server)" class="md-primary" ng-click="showWireGuard(server, account)">{{ 'account QR code' | translate }}</md-button>
                         <md-button ng-show="isTJ(server)" class="md-primary" ng-click="showQrcodeDialog(server, account)">{{ 'account QR code' | translate }}</md-button>
