--- a/plugins/webgui/public/views/admin/changePassword.html
+++ b/plugins/webgui/public/views/admin/changePassword.html
@@ -4,7 +4,7 @@
       <div></div>
       <div flex layout="column" layout-align="space-around stretch">
           <div style="height: 30px;"></div>
-          修改登录密码
+          Change login password
           <form name="passwordForm">
               <md-input-container class="md-block">
                   <label translate>原密码</label>
