--- a/plugins/webgui/public/views/admin/giftcardBatchList.html
+++ b/plugins/webgui/public/views/admin/giftcardBatchList.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="batch in batchList track by $index">
+    <div  ng-repeat="batch in batchList track by $index">
         <md-card ng-click="showBatch(batch.batchNumber)" md-colors="{{batchColor(batch)}}">
             <md-card-content>
                 <div layout="row" layout-align="space-between center" style="word-break: keep-all; white-space:nowrap; overflow: hidden; text-overflow:ellipsis;">
