--- a/plugins/webgui/public/views/admin/index.html
+++ b/plugins/webgui/public/views/admin/index.html
@@ -20,7 +20,7 @@
                     </md-list-item>
                     <md-list-item ng-if="!signupUsers.length">
                         <div flex layout="row" layout-align="space-between center">
-                            <div translate>无</div>
+                            <div translate>none</div>
                         </div>
                         <md-divider></md-divider>
                     </md-list-item>
@@ -49,7 +49,7 @@
                     </md-list-item>
                     <md-list-item ng-if="!loginUsers.length">
                         <div flex layout="row" layout-align="space-between center">
-                            <div translate>无</div>
+                            <div translate>none</div>
                         </div>
                         <md-divider></md-divider>
                     </md-list-item>
