--- a/plugins/webgui/public/views/admin/orderSetting.html
+++ b/plugins/webgui/public/views/admin/orderSetting.html
@@ -1,5 +1,5 @@
 <!-- <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="order in orders track by $index">
+    <div  ng-repeat="order in orders track by $index">
         <md-card ng-click="editOrder(order.id)" md-colors="{{ orderColor(order) }}">
             <md-card-content>
                 <div layout="row" layout-align="space-between center" style="word-break: keep-all; white-space:nowrap; overflow: hidden; text-overflow:ellipsis;">
@@ -13,7 +13,7 @@
 <div style="height: 100px;"></div> -->
 
 <div layout="row" layout-wrap ng-repeat="orders in groupOrders">
-    <div layout="row" flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="order in orders track by $index">
+    <div layout="row"  ng-repeat="order in orders track by $index">
         <div hide-gt-xs style="width: 25px; height: 10px;" ng-if="order.baseId"></div>
         <md-card flex ng-click="editOrder(order.id)" md-colors="{{ orderColor(order) }}">
             <md-card-content>
