--- a/plugins/webgui/public/views/admin/refCodeList.html
+++ b/plugins/webgui/public/views/admin/refCodeList.html
@@ -1,7 +1,7 @@
 <div ng-if="total === 0" layout="row" layout-align="center center" style="margin-top: 25px; font-size: 1.1em; color: #555">当前没有生成邀请码</div>
 <!-- <div ng-if="total > 0" style="margin: 10px 10px 5px 10px; font-size: 0.8em; color: #555">共 {{ total }} 个邀请码</div> -->
 <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="c in code track by $index">
+    <div  ng-repeat="c in code track by $index">
         <md-card md-colors="{{ codeColor(c) }}" ng-click="editRefCode(c.id)">
             <md-card-content>
                 <div layout="row" layout-align="space-between center">
@@ -14,7 +14,7 @@
             </md-card-content>
         </md-card>
     </div>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" in-view="view($inview)" ng-if="code.length && !isCodePageFinish">
+    <div  in-view="view($inview)" ng-if="code.length && !isCodePageFinish">
         <md-card>
             <md-card-content>
                 <div layout="row" layout-align="center center">
