--- a/plugins/webgui/public/views/admin/refUserList.html
+++ b/plugins/webgui/public/views/admin/refUserList.html
@@ -1,6 +1,6 @@
 <div ng-if="total === 0" layout="row" layout-align="center center" style="margin-top: 25px; font-size: 1.1em; color: #555">当前没有邀请的用户</div>
 <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="u in user track by $index">
+    <div  ng-repeat="u in user track by $index">
         <md-card>
             <md-card-content>
                 <md-list style="font-size: 0.9em;">
@@ -33,7 +33,7 @@
             </md-card-content>
         </md-card>
     </div>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" in-view="view($inview)" ng-if="user.length && !isUserPageFinish">
+    <div  in-view="view($inview)" ng-if="user.length && !isUserPageFinish">
         <md-card>
             <md-card-content>
                 <div layout="row" layout-align="center center">
