--- a/plugins/webgui/public/views/admin/user.html
+++ b/plugins/webgui/public/views/admin/user.html
@@ -12,7 +12,7 @@
             </md-card-content>
         </md-card>
     </div>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" in-view="view($inview)" ng-if="users.length && !isUserPageFinish">
+    <div  in-view="view($inview)" ng-if="users.length && !isUserPageFinish">
         <md-card>
             <md-card-content>
                 <div layout="row" layout-align="center center">
