--- a/plugins/webgui/public/views/user/account.html
+++ b/plugins/webgui/public/views/user/account.html
@@ -41,7 +41,7 @@
                         <md-list>
                             <md-list-item ng-hide="config.simple">
                                 <div flex layout="row" layout-align="space-between center">
-                                    <div flex="40" translate>地址：</div>
+                                    <div flex="40" translate>address：</div>
                                     <div flex="60" style="text-align:right">{{a.serverInfo.host}}</div>
                                 </div>
                             </md-list-item>
@@ -81,14 +81,14 @@
                             <md-divider ng-show="isTJ(a.serverInfo) && !config.simple"></md-divider>
                             <md-list-item ng-show="isSS(a.serverInfo) && !config.simple">
                                 <div flex layout="row" layout-align="space-between center">
-                                    <div flex="40">{{ '加密方式：' | translate }}</div>
+                                    <div flex="40">{{ 'Encryption：' | translate }}</div>
                                     <div flex="60" style="text-align:right">{{a.serverInfo.method}}</div>
                                 </div>
                             </md-list-item>
                             <md-divider ng-show="isSS(a.serverInfo) && !config.simple"></md-divider>
                             <md-list-item ng-show="isTJ(a.serverInfo) && !config.simple">
                                 <div flex layout="row" layout-align="space-between center">
-                                    <div flex="40">{{ '加密方式：' | translate }}</div>
+                                    <div flex="40">{{ 'Encryption：' | translate }}</div>
                                     <div flex="60" style="text-align:right">Trojan</div>
                                 </div>
                             </md-list-item>
@@ -129,7 +129,7 @@
                                 <div flex layout="row" layout-align="space-between center">
                                     <div flex="40">{{ '周期：' | translate }}</div>
                                     <div flex="60" style="text-align:right">
-                                        <span ng-if="a.type === 1">{{ '无' | translate }}</span>
+                                        <span ng-if="a.type === 1">{{ 'none' | translate }}</span>
                                         <span ng-if="a.type >=2 && a.type <= 5"><span style="font-size: 0.9em;">{{a.data.from | date : 'yyyy-MM-dd HH:mm'}}</span><br><span style="font-size: 0.9em;">{{a.data.to | date : 'yyyy-MM-dd HH:mm'}}</span>
                                         </span>
                                     </div>
@@ -160,7 +160,7 @@
                             <md-list-item>
                                 <div flex layout="row" layout-align="space-between center">
                                     <div flex="40" translate>备注：</div>
-                                    <div flex="60" style="text-align:right">{{ a.serverInfo.comment || '无' }}</div>
+                                    <div flex="60" style="text-align:right">{{ a.serverInfo.comment || 'none' }}</div>
                                 </div>
                             </md-list-item>
                             <md-divider></md-divider>
@@ -174,7 +174,7 @@
                 <md-button class="md-primary" ng-click="showQrcodeDialog(a.serverInfo, a)" ng-show="isSS(a.serverInfo)" ng-if="!config.simple">{{ 'account QR code' | translate }}</md-button>
                 <md-button class="md-primary" ng-click="showWireGuard(a.serverInfo, a)" ng-show="isWG(a.serverInfo)" ng-if="!config.simple">{{ 'account QR code' | translate }}</md-button>
                 <md-button class="md-primary" ng-click="showQrcodeDialog(a.serverInfo, a)" ng-show="isTJ(a.serverInfo)" ng-if="!config.simple">{{ 'account QR code' | translate }}</md-button>
-                <md-button class="md-primary" ng-click="subscribe(a.id)" ng-if="config.subscribe">{{ '订阅链接' | translate }}</md-button>
+                <md-button class="md-primary" ng-click="subscribe(a.id)" ng-if="config.subscribe">{{ 'subscribe link' | translate }}</md-button>
             </md-card-content>
         </md-card>
     </div>
