--- a/plugins/webgui/public/views/user/index.html
+++ b/plugins/webgui/public/views/user/index.html
@@ -21,7 +21,7 @@
                     <md-divider ng-show="notices.length <=0"></md-divider>
                 </md-list>
                 <div style="text-align: right;" ng-click="toNotice()">
-                    <md-button class="md-primary">{{ '更多' | translate }}&gt;&gt;</md-button>
+                    <md-button class="md-primary">{{ 'more' | translate }}&gt;&gt;</md-button>
                 </div>
             </md-card-content>
         </md-card>
@@ -48,7 +48,7 @@
                     <md-divider ng-show="notices.length <=0"></md-divider>
                 </md-list>
                 <div style="text-align: right;" ng-click="toNotice()">
-                    <md-button class="md-primary">{{ '更多' | translate }}&gt;&gt;</md-button>
+                    <md-button class="md-primary">{{ 'more' | translate }}&gt;&gt;</md-button>
                 </div>
             </md-card-content>
         </md-card>
@@ -64,7 +64,7 @@
                     <md-list-item>
                         <div flex layout="row" layout-align="space-between center">
                             <div flex="70" flex-xs="60" style="overflow: hidden; text-overflow: ellipsis;">
-                                <span translate>今日</span>
+                                <span translate>today</span>
                             </div>
                             <div flex="30" flex-xs="40" style="text-align: right;">
                                 <span style="color: #555">{{ usage[0] | flow}}</span>
@@ -75,7 +75,7 @@
                     <md-list-item>
                         <div flex layout="row" layout-align="space-between center">
                             <div flex="70" flex-xs="60" style="overflow: hidden; text-overflow: ellipsis;">
-                                <span translate>本周</span>
+                                <span translate>this week</span>
                             </div>
                             <div flex="30" flex-xs="40" style="text-align: right;">
                                 <span style="color: #555">{{ usage[1] | flow}}</span>
@@ -86,7 +86,7 @@
                     <md-list-item>
                         <div flex layout="row" layout-align="space-between center">
                             <div flex="70" flex-xs="60" style="overflow: hidden; text-overflow: ellipsis;">
-                                <span translate>本月</span>
+                                <span translate>this month</span>
                             </div>
                             <div flex="30" flex-xs="40" style="text-align: right;">
                                 <span style="color: #555">{{ usage[2] | flow}}</span>
