--- a/plugins/webgui/public/views/user/macAddress.html
+++ b/plugins/webgui/public/views/user/macAddress.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-if="macAccounts.length === 0">
+    <div  ng-if="macAccounts.length === 0">
         <md-card class="add-card" ng-click="addMacAccount()">
             <md-card-content>
                 <div layout="row" layout-align="center center">
@@ -8,7 +8,7 @@
             </md-card-content>
         </md-card>
     </div>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="account in macAccounts track by $index">
+    <div  ng-repeat="account in macAccounts track by $index">
         <md-card>
             <md-card-content>
                 <div layout="row" layout-align="space-between center">
