--- a/plugins/webgui/public/views/user/order.html
+++ b/plugins/webgui/public/views/user/order.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-wrap>
-    <div flex-xs="100" flex-sm="50" flex-md="33" flex-gt-md="25" ng-repeat="order in orders track by $index">
+    <div  ng-repeat="order in orders track by $index">
         <md-card ng-click="toUser(user)" md-colors="{{userColor(user)}}">
             <md-card-content>
                 <div layout="row" layout-align="space-between center">
