--- a/plugins/webgui/public/views/home/login.html
+++ b/plugins/webgui/public/views/home/login.html
@@ -80,8 +80,8 @@
                     <div flex layout="row" layout-align="center start">
                         <div flex="10"></div>
                         <div layout="row" flex layout-align="space-around center">
-                            <md-button class="md-primary" ng-click="findPassword()">{{ '找回密码' | translate }}</md-button>
-                            <md-button class="md-primary" ng-click="socialLogin()" ng-disabled="!hasSocialLogin">{{ '社交账号登录' | translate }}</md-button>
+                            <!-- <md-button class="md-primary" ng-click="findPassword()">{{ '找回密码' | translate }}</md-button> -->
+                            <!-- <md-button class="md-primary" ng-click="socialLogin()" ng-disabled="!hasSocialLogin">{{ '社交账号登录' | translate }}</md-button> -->
                             <!-- <md-button class="md-raised md-primary" ng-click="login()" ng-disabled="!user.email || !user.password">{{ 'Sign in' | translate }}</md-button> -->
                         </div>
                         <div flex="10"></div>
