--- a/plugins/webgui/public/views/home/signup.html
+++ b/plugins/webgui/public/views/home/signup.html
@@ -12,7 +12,7 @@
                         <div ng-message="email">{{ '必须填写一个有效邮箱地址' | translate }}</div>
                     </div>
                 </md-input-container>
-                <!-- <div layout="row">
+                <div layout="row">
                     <md-input-container class="md-block" flex="65">
                         <label>{{ '验证码' | translate }}</label>
                         <input type="text" required name="code" ng-model="user.code">
@@ -20,13 +20,13 @@
                             <div ng-message="required">{{ '验证码不能为空' | translate }}</div>
                         </div>
                     </md-input-container>
-                    <div flex layout="row" layout-align="space-between center">
+                    <!-- <div flex layout="row" layout-align="space-between center">
                         <div flex="5"></div>
                         <div style="margin-bottom: 25px;">
                             <md-button class="md-primary" ng-disabled="sendCodeTime || !user.email" ng-click="sendCode()" aria-label="send code"><span ng-if="sendCodeTime === 0">{{ '发送验证码' | translate }}</span><span ng-if="sendCodeTime > 0">{{ '已发送' | translate }}({{sendCodeTime}})</span></md-button>
                         </div>
-                    </div>
-                </div> -->
+                    </div> -->
+                </div>
                 <div layout="row">
                     <md-input-container class="md-block" flex="65">
                         <label>{{ 'password' | translate }}</label>
@@ -93,12 +93,12 @@
                                           <div ng-message="required">{{ '验证码不能为空' | translate }}</div>
                                       </div>
                                   </md-input-container>
-                                  <div flex layout="row" layout-align="space-between center">
+                                  <!-- <div flex layout="row" layout-align="space-between center">
                                       <div flex="5"></div>
                                       <div style="margin-bottom: 25px;">
                                           <md-button class="md-primary" ng-disabled="sendCodeTime || !user.email" ng-click="sendCode()" aria-label="send code"><span ng-if="sendCodeTime === 0">{{ '发送验证码' | translate }}</span><span ng-if="sendCodeTime > 0">{{ '已发送' | translate }}({{sendCodeTime}})</span></md-button>
                                       </div>
-                                  </div>
+                                  </div> -->
                               </div>
                               <div layout="row">
                                   <md-input-container class="md-block" flex="65">
