--- a/plugins/webgui/public/views/admin/code.html
+++ b/plugins/webgui/public/views/admin/code.html
@@ -1,11 +1,14 @@
 <div ng-if="total === 0" class="zero-element">no user<br /><span class="zero-element-link" ng-click="addCode()">click here to add</span></div>
 <div layout="row" layout-wrap>
     <div ng-repeat="code in codes track by $index">
-        <md-card ng-click="toCode(code)" md-colors="{{codeColor(code)}}" class="hover-mouse hover-flow">
+        <md-card md-colors="{{codeColor(code)}}" class="hover-mouse hover-flow">
             <md-card-content>
                 <div layout="row" layout-align="space-between center">
-                    <div flex="70" style="color: #333; font-size: 0.9em;">{{code.code}}</div>
-                    <div>
+                    <div layout="column" layout-align="space-between ">
+                        <div onclick="copy(this)" flex="70" style="color: #333; font-size: 0.9em;">{{code.code}}</div>
+                        <div onclick="copy(this)" flex="70" style="color: #333; font-size: 0.9em;">{{code.email}}</div>
+                    </div>
+                    <div ng-click="toCode(code)">
                         <md-icon>chevron_right</md-icon>
                     </div>
                 </div>
