--- a/plugins/webgui/views/index.html
+++ b/plugins/webgui/views/index.html
@@ -23,6 +23,16 @@
 </head>
 
 <body ng-cloak>
+    <script>
+        function copy(that){
+        var inp =document.createElement('input');
+        document.body.appendChild(inp)
+        inp.value =that.textContent
+        inp.select();
+        document.execCommand('copy',false);
+        inp.remove();
+        }
+    </script>
     <script src="<%= cdn%>/libs/lib.js"></script>
     <script>
         window.api = '';
