fix translate bugs

--- a/plugins/webgui/public/views/admin/index.html
+++ b/plugins/webgui/public/views/admin/index.html
@@ -3,7 +3,7 @@
         <md-card>
             <md-card-header>
                 <md-card-header-text ng-click="toRecentSignup()">
-                    <span class="md-headline" translate style="cursor: pointer;">最新注册用户</span>
+                    <span class="md-headline" translate style="cursor: pointer;">Newest Registered Users</span>
                 </md-card-header-text>
             </md-card-header>
             <md-card-content>
@@ -32,7 +32,7 @@
         <md-card>
             <md-card-header>
                 <md-card-header-text ng-click="toRecentLogin()">
-                    <span class="md-headline" translate style="cursor: pointer;">最近登录用户</span>
+                    <span class="md-headline" translate style="cursor: pointer;">Recently logged in user</span>
                 </md-card-header-text>
             </md-card-header>
             <md-card-content>
@@ -115,7 +115,7 @@
         <md-card>
             <md-card-header>
                 <md-card-header-text ng-click="toTopFlow()">
-                    <span class="md-headline" translate style="cursor: pointer;">今日流量排行</span>
+                    <span class="md-headline" translate style="cursor: pointer;">Today's traffic ranking</span>
                 </md-card-header-text>
             </md-card-header>
             <md-card-content>
