--- a/plugins/webgui/public/views/user/qrcodeDialog.html
+++ b/plugins/webgui/public/views/user/qrcodeDialog.html
@@ -15,7 +15,7 @@
                     <qr layout-margin text="publicInfo.ssAddress" image="true"></qr>
                 </a>
                 <div>
-                    <br>{{ '点击二维码或者用移动设备扫描二维码可自动填充服务器信息' | translate }}
+                    <br>{{ 'Click the QR code or scan it by smartphone to retrieve server information automatically' | translate }}
                 </div>
                 <div
                   class="hover-mouse"
